fix: Pin 컴포넌트에 overflow-x 추가

--- a/src/components/ImageCarousel/ImageCarousel.module.scss
+++ b/src/components/ImageCarousel/ImageCarousel.module.scss
@@ -84,7 +84,6 @@ button {
   &__container {
     width: 550px;
     position: relative;
-    overflow-x: hidden;
     margin-top: 15px;
 
     @include media.media-breakpoint-down(mobile) {
